# zope.formlib

./: .coveragerc  .gitignore  .meta.toml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  INSTALL.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  __init__.py  buildout.cfg  configure.zcml  errors.py  form.py  form.txt  ftests.py  i18n.py  interfaces.py  namedtemplate.py  page.py  page.txt  pageform.pt  pyproject.toml  setup.cfg  setup.py  subpageform.pt  test.py  tests.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  errors.rst  form.rst  index.rst  objectwidget.rst  requirements.txt  source.rst  widgets.rst
docs/api/: index.rst
locales/: zope.formlib.pot
locales/de/LC_MESSAGES/: zope.formlib.mo  zope.formlib.po
src/zope/formlib/: __init__.py  _compat.py  boolwidgets.py  bugs.txt  configure.zcml  errors.py  errors.rst  errors.txt  exception.py  form.py  form.rst  form.txt  ftesting.zcml  i18n.py  interfaces.py  itemswidgets.py  namedtemplate.py  namedtemplate.txt  objectwidget.py  objectwidget.rst  objectwidget.txt  orderedSelectionList.pt  page.txt  pageform.pt  sequencewidget.py  source.py  source.rst  source.txt  subpageform.pt  tests.py  textwidgets.py  utility.py  widget.py  widgets.py  widgets.txt  widgets.zcml
src/zope/formlib/js/: ordered_selection.js  pageform.js
src/zope/formlib/tests/: functionalsupport.py  support.py  test_browserwidget.py  test_checkboxwidget.py  test_choicecollections.py  test_choicewidget.py  test_datetimewidget.py  test_datewidget.py  test_decimalwidget.py  test_displaywidget.py  test_exception.py  test_filewidget.py  test_floatwidget.py  test_form.py  test_formlib.py  test_functional_booleanradiowidget.py  test_functional_checkboxwidget.py  test_functional_datetimewidget.py  test_functional_decimalwidget.py  test_functional_filewidget.py  test_functional_floatwidget.py  test_functional_intwidget.py  test_functional_objectwidget.py  test_functional_selectwidget.py  test_functional_textareawidget.py  test_functional_textwidget.py  test_interfaces.py  test_intwidget.py  test_itemswidget.py  test_multicheckboxwidget.py  test_objectwidget.py  test_passwordwidget.py  test_radiowidget.py  test_registrations.py  test_selectwidget.py  test_sequencewidget.py  test_setprefix.py  test_source.py  test_textareawidget.py  test_textwidget.py  (+2 more)
