# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.formlib"
version = "7.1.dev0"
description = "Form generation and validation library for Zope"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "setuptools",
    "pytz",
    "zope.browser>=1.1",
    "zope.browserpage>=3.11.0",
    "zope.browserresource",
    "zope.component",
    "zope.event",
    "zope.i18n",
    "zope.i18nmessageid",
    "zope.interface",
    "zope.lifecycleevent",
    "zope.publisher",
    "zope.schema>=3.5.1, !=6.1",
    "zope.security",
    "zope.traversing",
    "zope.datetime",
]
keywords = ["zope3", "form", "widget"]

[project.optional-dependencies]
test = [
    "zope.configuration",
    "zope.schema >= 6.1",
    "zope.testing",
    "zope.testrunner >= 6.4",
]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
    "repoze.sphinx.autointerface",
]

[project.urls]
Source = "https://github.com/zopefoundation/zope.formlib"
Documentation = "https://zopeformlib.readthedocs.io/"
Changelog = "https://raw.githubusercontent.com/zopefoundation/zope.formlib/master/CHANGES.rst"
Issues = "https://github.com/zopefoundation/zope.formlib/issues"

[tool.coverage.run]
branch = true
source = ["zope.formlib"]

[tool.coverage.report]
fail_under = 93
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

